// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Oca Attribute Given a attributeLabel should render the attribute label properly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "paddingHorizontal": 25,
        "paddingTop": 16,
        "width": "100%",
      },
      undefined,
    ]
  }
>
  <Text>
    Birth date
  </Text>
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "space-between",
        "maxWidth": "100%",
        "paddingTop": 10,
      }
    }
  >
    <View
      style={
        Object {
          "color": "#333",
          "paddingVertical": 4,
        }
      }
    >
      <Text
        numberOfLines={200}
        style={
          Array [
            Object {
              "color": "#333",
              "fontSize": 18,
              "fontWeight": "normal",
            },
            undefined,
          ]
        }
      >
        2000-02-21
      </Text>
    </View>
    <View />
  </View>
  <View
    style={
      Array [
        Object {
          "borderBottomColor": "#c9c9c9",
          "borderBottomWidth": 2,
          "paddingTop": 12,
        },
        undefined,
      ]
    }
  />
</View>
`;

exports[`Oca Attribute Given a attributeValue should render the attribute value properly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "paddingHorizontal": 25,
        "paddingTop": 16,
        "width": "100%",
      },
      undefined,
    ]
  }
>
  <View>
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "#333",
            "fontSize": 14,
            "fontWeight": "bold",
          },
          undefined,
        ]
      }
    >
      Birth date
    </Text>
  </View>
  <Text>
    2000-02-21
  </Text>
  <View
    style={
      Array [
        Object {
          "borderBottomColor": "#c9c9c9",
          "borderBottomWidth": 2,
          "paddingTop": 12,
        },
        undefined,
      ]
    }
  />
</View>
`;

exports[`Oca Attribute Given a binary attribute should render properly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "paddingHorizontal": 25,
        "paddingTop": 16,
        "width": "100%",
      },
      undefined,
    ]
  }
>
  <View>
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "#333",
            "fontSize": 14,
            "fontWeight": "bold",
          },
          undefined,
        ]
      }
    >
      Picture
    </Text>
  </View>
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "space-between",
        "maxWidth": "100%",
        "paddingTop": 10,
      }
    }
  >
    <View
      style={
        Object {
          "color": "#333",
          "paddingVertical": 4,
        }
      }
    >
      <Image
        source={
          Object {
            "uri": "iVBORw0KGgoAAAANSUhEUgAAAV4AAAFeAQAAAADlUEq3AAAAAW9yTlQBz6J3mgAAACZJREFUaN7twTEBAAAAwqD1T+1pCaAAAAAAAAAAAAAAAAAAAAC4AT2GAAGWvJzxAAAAAElFTkSuQmCC",
          }
        }
        style={
          Object {
            "aspectRatio": 1,
            "borderRadius": 10,
            "height": 150,
            "resizeMode": "contain",
          }
        }
      />
    </View>
    <View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View>
          <Text
            style={
              Array [
                Object {
                  "color": "#333",
                  "fontSize": 18,
                  "fontWeight": "normal",
                },
                undefined,
              ]
            }
          >
            Hide
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "borderBottomColor": "#c9c9c9",
          "borderBottomWidth": 2,
          "paddingTop": 12,
        },
        undefined,
      ]
    }
  />
</View>
`;

exports[`Oca Attribute Given a text attribute should render properly. 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "paddingHorizontal": 25,
        "paddingTop": 16,
        "width": "100%",
      },
      undefined,
    ]
  }
>
  <View>
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "#333",
            "fontSize": 14,
            "fontWeight": "bold",
          },
          undefined,
        ]
      }
    >
      Birth date
    </Text>
  </View>
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "space-between",
        "maxWidth": "100%",
        "paddingTop": 10,
      }
    }
  >
    <View
      style={
        Object {
          "color": "#333",
          "paddingVertical": 4,
        }
      }
    >
      <Text
        numberOfLines={200}
        style={
          Array [
            Object {
              "color": "#333",
              "fontSize": 18,
              "fontWeight": "normal",
            },
            undefined,
          ]
        }
      >
        2000-02-21
      </Text>
    </View>
    <View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View>
          <Text
            style={
              Array [
                Object {
                  "color": "#333",
                  "fontSize": 18,
                  "fontWeight": "normal",
                },
                undefined,
              ]
            }
          >
            Hide
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "borderBottomColor": "#c9c9c9",
          "borderBottomWidth": 2,
          "paddingTop": 12,
        },
        undefined,
      ]
    }
  />
</View>
`;
